# XDevCalc

./: Makefile.in  Makefile.win32  README.md  XDevCalc.vcxproj  XDevCalc.vcxproj.filters  configure  configure.ac  configure.bat
Libs/: ConfigFileInfo.h  mputils.cpp  mputils.h
Libs/TinyJS/: TinyJS.cpp  TinyJS.h  TinyJS_Functions.cpp  TinyJS_MathFunctions.cpp
Src/: Config.cpp  Config.h  DevCalc.cpp  DevCalc.h  Helper.cpp  Helper.h
Src/Win32/: AppRes.rc
